# akcie

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/templates/setup/: action.yaml
.github/workflows/: basic-workflow.yml  push-workflow.yml  python-app.yml
stock_summary/: Makefile  help_structures.py  library.py  main.py  parsers.py  settings.py  validation.py
stock_summary/clouds/: azure.py  logic.py
stock_summary/demo_datasets/: dividends  entries  index.html  portfolio
stock_summary/html_files/: jinja.html
stock_summary/init_datasets/: dividends  entries  portfolio
tests/: test_clouds.py  test_tool_sanity.py
tests/testing_data/testing_data_A/: dividends  entries  portfolio
