[tool.poetry]
name = "stock_summary_tool"
version = "0.1.1"
description = "Tool for tracking of your investments and your actual portfolio"
authors = ["Simon Foucek <foucek.simon@gmail.com>"]
readme = "README.md"
packages = [
    { include = "stock_summary" },
]
[tool.poetry.dependencies]
python = "^3.8,<3.12"
pandas = "^1.5.2"
jinja2 = "^3.1.2"
requests = "^2.28.1"
plotly = "^5.11.0"
appdirs = "^1.4.4"
azure-storage-file-share = "^12.11.1"
python-dotenv = "^1.0.0"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
mypy = "0.991"
pylint = "2.15.9"
isort = "5.11.4"
black = "22.12.0"
types-requests = "2.28.11.7"
pandas-stubs = "1.5.2.230105"
types-appdirs = "1.4.3.1"
cffi = "1.15.1"
pytest = "^7.2.1"
setuptools = "^67.0.0"
pylint-pydantic = "^0.1.8"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stock_summary_tool = "stock_summary.main:main"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports= true


[tool.pylint.overrides]
disable = ["W1203"]
fail-under = 9.5

[tool.isort]
profile = "black"